--- a/src/Gemfile
+++ b/src/Gemfile
@@ -6,7 +6,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "2.5.3"
 
 # gem "pg", ">= 0.18", "< 2.0"
-gem 'sqlite3', '~> 1.3.6'
+gem "sqlite3", "~> 1.3.6"
 gem "puma", "~> 3.11"
 gem "rails", "~> 5.2.2"
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
@@ -21,8 +21,8 @@ gem "redis", "~> 4.0"
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
-gem 'rubocop', '~> 0.63.1'
-gem 'rubocop-rails_config', '~> 0.4.3'
+gem "rubocop", "~> 0.63.1"
+gem "rubocop-rails_config", "~> 0.4.3"
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", ">= 1.1.0", require: false
 
@@ -39,7 +39,7 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem "spring"
   gem "spring-watcher-listen", "~> 2.0.0"
-  gem 'faker', '~> 1.9', '>= 1.9.1'
+  gem "faker", "~> 1.9", ">= 1.9.1"
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
