added allow cors

--- a/src/Gemfile
+++ b/src/Gemfile
@@ -25,7 +25,7 @@ gem "rubocop", "~> 0.63.1"
 gem "rubocop-rails_config", "~> 0.4.3"
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", ">= 1.1.0", require: false
-
+gem "rack-cors"
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 # gem 'rack-cors'
 
