--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - 8080:8080
   redis:
     image: redis
-    ports:
-      - '6379:6379'
+    #ports:
+    #  - '6379:6379'
     volumes:
       - myapp-redis:/var/lib/redis/data:rw
   web:
